[gd_scene load_steps=3 format=3 uid="uid://3dd11g371hii"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_2whdk"]
[ext_resource type="Theme" uid="uid://bmv1ak3cxlbqy" path="res://scenes/main_theme_text.tres" id="2_hifib"]

[node name="PauseMenuCanvas" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_2whdk")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
self_modulate = Color(0.243137, 0.658824, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -188.0
offset_right = 222.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -74.5
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hifib")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "-- PAUSE --"
horizontal_alignment = 1

[node name="SaveBtn" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
self_modulate = Color(0.996078, 0.866667, 0.588235, 1)
layout_mode = 2
text = "Save"

[node name="LoadBtn" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
self_modulate = Color(0.231373, 0.392157, 0, 1)
layout_mode = 2
text = "Load"

[node name="ExitBtn" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
self_modulate = Color(0.862745, 0, 0.286275, 1)
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/LoadBtn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
